--- a/css/navbar.css
+++ b/css/navbar.css
@@ -68,6 +68,7 @@ a {
 
 @media screen and (max-width: 767px) {
   .navbar {
+    width: 100%;
     flex-direction: column;
     align-items: flex-start;
     padding: 8px 24px;
