--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,11 +1,11 @@
 :root {
   --text-color: #f0f4f5;
   --background-color: #263343;
-  --accent-color: rgb(255, 159, 172);
+  --accent-color: rgb(250, 111, 130);
 }
 
 body {
-  margin: 0;
+  margin: 0 0 100px 0;
   font-family: "Roboto Condensed", sans-serif;
 }
 
@@ -19,7 +19,7 @@ a {
   justify-content: space-between;
   align-items: center;
   background-color: var(--background-color);
-  padding: 8px 20px;
+  padding: 18px 20px;
 }
 
 .navbar__logo {
@@ -69,6 +69,7 @@ a {
 @media screen and (max-width: 767px) {
   .navbar {
     width: 100%;
+    display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 8px 24px;
