--- a/css/message.css
+++ b/css/message.css
@@ -7,7 +7,7 @@
 #message_box {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: lighter;
-  width: 60%;
+  width: 40%;
   height: 300px;
   margin: 0 auto;
   margin-top: 40px;
@@ -161,4 +161,14 @@ button {
 button:hover {
   background-color: rgb(255, 75, 99);
   box-shadow: 0 1px 10px 1px rgb(64 60 67 / 15%);
+}
+
+@media screen and (max-width: 767px) {
+  #message_box {
+    width: 80%;
+  }
+  /* 
+  #write_msg .col {
+    display: none;
+  } */
 }
