--- a/css/message_box.css
+++ b/css/message_box.css
@@ -90,6 +90,7 @@ h3 {
 #message .col2 {
   width: 45%;
 }
+
 #message .col3 {
   width: 15%;
 }
@@ -106,4 +107,10 @@ h3 {
 
 #message .col2 a {
   color: black;
+}
+
+#message .col2 a:hover {
+  text-decoration: underline;
+  color: var(--background-color);
+  font-weight: bold;
 }
