--- a/css/message_view.css
+++ b/css/message_view.css
@@ -11,7 +11,6 @@
   margin-top: 50px;
   width: 80%;
   height: 300px;
-  margin-top: 50px;
   padding: 10px;
 }
 
@@ -50,6 +49,8 @@
   text-align: right;
 }
 #view_content li:nth-child(2) {
+  /* 자동 스크롤바 생성 */
+  overflow: auto;
   height: 200px;
   padding: 15px 15px 15px 15px;
   border-bottom: solid 1px #cccccc;
