--- a/css/board_form.css
+++ b/css/board_form.css
@@ -39,7 +39,9 @@
   height: 40px;
   line-height: 40px;
   padding: 5px 10px;
-  background-color: rgb(241, 247, 253);
+  /* background-color: white; */
+  background-color: rgba(230, 230, 230, 0.428);
+  /* box-shadow: rgb(0 0 0 / 10%) 0px 0px 8px; */
   border-radius: 5px;
 }
 
@@ -71,7 +73,9 @@ textarea::placeholder {
   left: 0;
   bottom: 0;
   width: 100%;
-  background: rgb(241, 247, 253);
+  background: white;
+  box-shadow: rgb(0 0 0 / 15%) 0px 0px 8px;
+
   height: 60px;
   line-height: 60px;
 }
