--- a/css/sign_up.css
+++ b/css/sign_up.css
@@ -78,3 +78,9 @@
   background-color: var(--background-color);
   color: var(--text-color);
 }
+
+@media screen and (max-width: 767px) {
+  #main_content {
+    width: 100%;
+  }
+}
