--- a/css/navbar.css
+++ b/css/navbar.css
@@ -5,7 +5,9 @@
 }
 
 body {
-  margin: 0 0 100px 0;
+  /* margin: 0 0 100px 0; */
+  width: 100%;
+  height: 100%;
   font-family: "Roboto Condensed", sans-serif;
 }
 
@@ -20,7 +22,7 @@ a {
   align-items: center;
   background-color: var(--background-color);
   padding: 18px 20px;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .navbar__logo {
