--- a/css/sign_up.css
+++ b/css/sign_up.css
@@ -9,17 +9,21 @@
   font-family: "Gothic A1", sans-serif;
   font-weight: bolder;
   position: relative;
-  width: 1000px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
 }
 
 /* 가입 양식 폼 */
 #join_box {
-  width: 60%;
+  width: 30%;
   margin: 0 auto;
+  display: block;
+  line-height: 1.2;
 }
-#join_box h2 {
+#main_content h2 {
+  display: flex;
+  justify-content: center;
   font-family: "Pattaya", sans-serif;
   font-weight: bolder;
   font-size: 40px;
@@ -40,31 +44,72 @@
   float: left;
 }
 #join_box .form input {
-  width: 390px;
+  width: 100%;
   height: 22px;
-}
-#join_box .form {
-  height: 38px;
-}
-#join_box .id {
-  margin-top: 20px;
-}
-#join_box input[name="email1"] {
-  width: 95px;
-}
-#join_box input[name="email2"] {
-  width: 265px;
-}
-#join_box .bottom_line {
-  margin-top: 10px;
-  border-bottom: solid 1px #cccccc;
-}
-#join_box .buttons {
-  text-align: right;
-  margin: 20px 100px 0 0;
+  border-radius: 4px;
+  border: 2px solid #e7e7e7;
 }
 
-#join_box span {
+#join_box .form input:hover {
+  border: 2px solid #a4bcf1;
+}
+/* #join_box .form {
+  height: 30px;
+} */
+
+#join_box .insert_id button {
+  width: 100%;
+  margin-left: 0;
+  margin-top: 5px;
+  border: none;
+  margin-left: 4px;
+}
+
+#join_box .insert_id button:hover {
+  background-color: #5377c4;
+  color: white;
+}
+
+#join_box .row1 {
+  margin-top: 10px;
+}
+
+#join_box input[name="email1"] {
+  width: 100%;
+}
+#join_box input[name="email2"] {
+  width: 100%;
+}
+
+#join_box .buttons {
+  text-align: right;
+  margin: 20px 0 0 0;
+}
+
+#join_box .buttons .saveBtn {
+  padding: 10px 20px;
+  color: white;
+  border-radius: 5px;
+
+  background-color: var(--background-color);
+}
+
+#join_box .buttons .resetBtn {
+  padding: 10px 20px;
+  color: white;
+  border-radius: 5px;
+  background-color: var(--background-color);
+}
+
+#join_box .buttons .saveBtn:hover {
+  background-color: var(--accent-color);
+}
+
+#join_box .buttons .resetBtn:hover {
+  background-color: var(--accent-color);
+}
+
+#join_box .check_id {
   background-color: #e7e7e7;
   width: 100%;
   padding: 5px 10px;
@@ -80,16 +125,10 @@
 }
 
 @media screen and (max-width: 767px) {
+  #join_box {
+    width: 70%;
+  }
   #main_content {
     width: 100%;
-  }
-
-  #join_box .form input {
-    width: 80%;
-    height: 22px;
-  }
-
-  #join_box input[name="email2"] {
-    width: 60%;
   }
 }
