css 수정(반응형)

--- a/css/board_view.css
+++ b/css/board_view.css
@@ -134,4 +134,21 @@
   #board_box li .image_file img {
     width: 100%;
   }
+  .buttons {
+    display: block;
+  }
+
+  .buttons .button_left {
+    display: block;
+    width: 100%;
+  }
+
+  .buttons .button_right {
+    display: block;
+    width: 100%;
+  }
+
+  .buttons button {
+    width: 100%;
+  }
 }
