--- a/css/login.css
+++ b/css/login.css
@@ -14,7 +14,7 @@
 }
 
 #login_box {
-  width: 60%;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -119,4 +119,7 @@ input {
 
 .create-account__text:hover {
   color: rgb(251, 0, 34);
+}
+
+@media screen and (max-width: 767px) {
 }
