--- a/css/main_gallery.css
+++ b/css/main_gallery.css
@@ -15,6 +15,11 @@ body {
   margin-top: 50px;
 }
 
+#board_box .selectBtn {
+  color: black;
+  background-color: aqua;
+}
+
 #board_box h3 {
   font-family: "Pattaya", sans-serif;
   font-size: 50px;
