--- a/css/main_gallery.css
+++ b/css/main_gallery.css
@@ -15,11 +15,6 @@ body {
   margin-top: 50px;
 }
 
-#board_box .selectBtn {
-  color: black;
-  background-color: aqua;
-}
-
 #board_box h3 {
   font-family: "Pattaya", sans-serif;
   font-size: 50px;
@@ -161,6 +156,24 @@ button:hover {
   background-color: #ebebeb;
   color: black;
   box-shadow: 0 2px 5px 2px rgb(64 60 67 / 25%);
+}
+
+#board_box .selectBtn a {
+  width: 100px;
+  font-weight: bolder;
+  color: black;
+  background-color: rgb(235, 235, 235);
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-radius: 5px;
+}
+
+#board_box .selectBtn a:hover {
+  background-color: var(--accent-color);
+  color: white;
 }
 
 @media screen and (max-width: 767px) {
