--- a/css/main_gallery.css
+++ b/css/main_gallery.css
@@ -169,6 +169,7 @@ button:hover {
   flex-direction: row;
   justify-content: center;
   border-radius: 5px;
+  margin-bottom: 20px;
 }
 
 #board_box .selectBtn a:hover {
